packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/wld-002-extends-unresolved.ttrp
// expect: TTRP-WLD-002
// models: extends-unresolved
uses world "acme.worlds.dev"
container c target erp_pg { }
